--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,6 +43,12 @@
             android:text="Login"
             android:onClick="Login"/>
 
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/facebook"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal" />
+
         <TextView android:id="@+id/link_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -51,6 +57,7 @@
             android:gravity="center"
             android:textSize="16dip"
             android:onClick="Signup"/>
+
 
     </LinearLayout>
 </ScrollView>
