--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="Add Comment"
+        android:text="Add Comment/Rating"
         android:onClick="addComment"/>
 
 </LinearLayout>
