--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -28,4 +28,12 @@
         android:text="Add Comment/Rating"
         android:onClick="addComment"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:text="Exit"
+        android:onClick="exit"/>
+
+
 </LinearLayout>
