Added Map functionality. Allows users to see map of locations

--- a/app/src/main/res/layout/location.xml
+++ b/app/src/main/res/layout/location.xml
@@ -23,11 +23,12 @@
             android:text="SEARCH"/>
 
     </LinearLayout>
-    <TextView
+    <Button
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight=".7"
-        android:text="MAP GOES HERE"
+        android:text="See Map"
+        android:onClick="seeMap"
         />
 
     <android.support.v7.widget.RecyclerView
