Added in Map Options

--- a/app/src/main/res/layout/location.xml
+++ b/app/src/main/res/layout/location.xml
@@ -30,6 +30,13 @@
         android:text="See Map"
         android:onClick="seeMap"
         />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight=".7"
+        android:text="See Map"
+        android:onClick="getFriendsList"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
