--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -4,4 +4,20 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:id="@+id/map"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"></fragment>
+    android:layout_height="match_parent">
+
+
+
+    <Button
+        android:id="@+id/friendsList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GET FRIENDS"
+        android:onClick="getFriends">
+    </Button>
+
+    <Spinner
+        android:id="@+id/KeyWord"
+        android:onClick="highlight">
+    </Spinner>
+</fragment>
