--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -34,6 +34,12 @@
         android:layout_weight="1"
         android:text="See Pictures"
         android:onClick="pictures"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:text="Delete Location"
+        android:onClick="Delete"/>
 
     <Button
         android:layout_width="match_parent"
