--- a/app/src/main/res/layout/location.xml
+++ b/app/src/main/res/layout/location.xml
@@ -34,7 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight=".7"
-        android:text="See Map"
+        android:text="See Facebook Friends Using App"
         android:onClick="getFriendsList"
         />
 
