--- a/app/src/main/res/layout/location.xml
+++ b/app/src/main/res/layout/location.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight=".8">
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
 
         <EditText
             android:layout_width="match_parent"
@@ -25,15 +25,15 @@
     </LinearLayout>
     <Button
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight=".7"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:text="See Map"
         android:onClick="seeMap"
         />
     <Button
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight=".7"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:text="See Facebook Friends Using App"
         android:onClick="getFriendsList"
         />
@@ -41,8 +41,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight=".3"
+        android:layout_height="wrap_content"
+        android:layout_weight="5"
         android:scrollbars="vertical"/>
 
 </LinearLayout>
